fix mobile close button spacing

--- a/less/base.less
+++ b/less/base.less
@@ -172,11 +172,16 @@ body{
     		margin:3%;
     		background-color: #ccc;
     		height:100%;
+    		h2{
+    			margin:10px 0; 
+    		}
+    		p{
+    			margin-top:10px;
+    		}
     		.close{
     			cursor:pointer;
-    			margin:10px;
-    			text-align: right;
-    			border-bottom:1px solid #bbb;
+			    position: absolute;
+				right: 3%;
     			img{
     				width:50px;
     				padding:10px;
