--- a/less/mobile.less
+++ b/less/mobile.less
@@ -17,10 +17,17 @@
 		}
 		.box{
 			img {
-			  opacity: 0.3 !important;
+			  opacity: 0.8 !important;
 			}
 			.middle {
 			  opacity: 1 !important;
 			}
 		}
+		.overlay{
+    		.overlay-inner{
+	    		p{
+	    			font-size:13px;
+	    		}
+	    	}
+	    }
 }
